# ecommerce-video-gen-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  dockerbuild.sh  ecommerce-video-gen.yaml  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
scripts/: mp4ToMp3.sh
src/: app.py  callback.py
src/coze/: coze_asr.py  coze_workflow.py
src/coze/coze_plugins/: save_excel.py
src/ecommerce_video_gen_demo/: minimax.py
src/ecommerce_video_gen_demo/comfyui_workflow/: flux_dev_fp8.py  replace_background.py  typing.py
src/ecommerce_video_gen_demo/platform/: comfyui.py  minmax.py
src/ecommerce_video_gen_demo/utils/: file_utils.py  image_utils.py  logger.py  random_utils.py
src/utils/: datetime_utils.py  file_utils.py  text_utils.py
src/vedio-gen/: minimax.py
src/wechat_assistant/: WXBizMsgCrypt.py  bw_appinfo.py  bw_utils.py  faq_assistant.py
src/wechat_assistant/coze_crawler/: coze_urls.py  crawler.py  crawler2.py
