[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce_video_gen_demo"
version = "0.3.0"
description = "电商视频素材生成演示"
requires-python = ">=3.11"
dependencies = [
    "pylint~=3.3.4",
    "openai~=1.61.1",
    "python_dotenv~=1.0.1",
    "gradio~=5.20.0",
    "pycryptodome~=3.22.0",
    "beautifulsoup4~=4.13.3",
    "python-slugify~=8.0.4",
    "pydantic~=2.10.1",
    "requests~=2.32.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
